--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcc 'PA'
 - !lcsh 'Greek drama (Comedy) -- Translations into Dutch'
 - !lcsh 'Comedies'
+- GITenberg
 title: De Ridders
 url: http://www.gutenberg.org/ebooks/37828
